--- a/List Comprehension-II.ipynb
+++ b/List Comprehension-II.ipynb
@@ -349,7 +349,32 @@
    "source": [
     "tags = [u'man', u'you', u'are', u'awesome']\n",
     "entries = [[u'man', u'thats'],[ u'right',u'awesome']]\n",
-    "[entry for tag in tags for entry in entries if tag in entry]\n"
+    "[entry for tag in tags for entry in entries if tag in entry]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#if something is in a list or not\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is my Rohit\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=\"Rohit\"\n",
+    "statement='This is my'\n",
+    "print(f'{statement} {name}')"
    ]
   },
   {
@@ -376,9 +401,52 @@
     }
    ],
    "source": [
+    "tags = ['man', 'you', 'are', 'awesome']\n",
+    "entries = ['man', 'thats', 'right','awesome']\n",
+    "[entry for tag in tags for entry in entries if tag == entry]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['man', 'awesome']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[]\n",
     "tags = [u'man', u'you', u'are', u'awesome']\n",
     "entries = [u'man', u'thats', u'right',u'awesome']\n",
-    "[entry for tag in tags for entry in entries if tag == entry]"
+    "for tag in tags:\n",
+    "    for entry in entries:\n",
+    "        if tag == entry:\n",
+    "            a.append(entry)\n",
+    "print(a)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "©\n",
+      "™\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(u\"\\u00A9\")\n",
+    "print(u\"\\u2122\")"
    ]
   },
   {
